fixing the navbar, fixing row -> margin in app.blade.php, add css class "scrollbar-none" in app.css.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,6 +60,28 @@
   --bs-body-bg: #f8fafc;
 }
 
+.scrollbar-none {
+    background-color: #eee;
+    width: 200px;
+    height: 100px;
+    border: 1px dotted black;
+    overflow-y: scroll;
+    /* Add the ability to scroll y axis*/
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-none {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
 *,
 *::before,
 *::after {
